# Grove

./: CONTRIBUTING.md  LICENSE  README.md  build.bat  go.mod  go.sum  gr.sh  main.go  pyproject.toml  test_fail_debug.txt
cmd/: add.go  exec.go  init.go  list.go  remove.go  root.go  skills.go  status.go  switch.go  sync.go
gr/: main.go
internal/config/: config.go
internal/git/: git.go
internal/manager/: manager.go
skills/grove/: SKILL.md
src/grove/: config.py  git.py  main.py  manager.py
tests/: integration_test.go
